--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -70,11 +70,13 @@ include-file = ~/.config/polybar/bottom_bar.ini
 ; just care about the last one. But if we wait too long for events to swallow
 ; the bar would appear sluggish so we continue if timeout
 ; expires or limit is reached.
+;
 throttle-output = 5
 throttle-output-for = 10
 
 ; Time in milliseconds that the input handler will wait between processing events
-throttle-input-for = 30
+; **DEPRECATED**
+;throttle-input-for = 30
 
 ; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
 screenchange-reload = false
