--- a/.config/polybar/bottom_bar.ini
+++ b/.config/polybar/bottom_bar.ini
@@ -83,8 +83,8 @@ padding = 0
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 2
+;module-margin-left = 1
+;module-margin-right = 2
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -103,8 +103,9 @@ module-margin-right = 2
 
 font-0 = "Meslo LG S:size=7;2"
 font-1 = "Symbols Nerd Font:size=11;2"
-font-2 = "WenQuanYi Micro Hei:size=7;2"
-font-3 = "Noto Sans CJK SC:size=7;2"
+font-2 = "MesloLGS Nerd Font Mono::size=13;3"
+font-3 = "WenQuanYi Micro Hei:size=7;2"
+font-4 = "Noto Sans CJK SC:size=12;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -127,9 +128,9 @@ font-3 = "Noto Sans CJK SC:size=7;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = launcher i3
-modules-center = mpd_bar
-modules-right = pulseaudio custom_backlight battery battery_power calendar sysmenu
+modules-left = mpd_bar left--2
+modules-center = i3
+modules-right = i3-mode right-4 pulseaudio right-3 custom_backlight right-2 battery battery_power right-1 calendar
 
 ; The separator will be inserted between the output of each module
 separator =
