--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -27,8 +27,18 @@ bm = #fdd835
 bd = #e53935
 
 trans = #00000000
-white = #FFFFFF
-black = #000000
+white = #eee8d5
+black = #002b36
+
+;; Shade
+shade1 = #1B5E20
+shade2 = #2E7D32
+shade3 = #388E3C
+shade4 = #43A047
+shade5 = #4CAF50
+shade6 = #66BB6A
+shade7 = #81C784
+shade8 = #A5D6A7
 
 ;; Material Colors
 
