--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -156,12 +156,19 @@ time-format = %H:%M
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
 ;;format-charging-prefix = 
+format-charging-background = ${color.shade2}
+format-charging-foreground = ${color.white}
+format-charging-padding = 1
+
 ; Available tags:
 ;   <label-discharging> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
 format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-background = ${color.shade2}
+format-discharging-foreground = ${color.white}
+format-discharging-padding = 1
 
 ; Available tags:
 ;   <label-full> (default)
@@ -185,6 +192,8 @@ label-discharging = %percentage%%
 ; Available tokens:
 ;   %percentage% (default)
 label-full = 
+label-full-background = ${color.shade2}
+label-full-foreground = ${color.white}
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
@@ -499,6 +508,25 @@ label-unmounted = %mountpoint%: not mounted
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/i3-mode]
+type = internal/i3
+
+; Available tags:
+;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
+;   <label-mode> (default)
+format = <label-mode>
+
+; Available tokens:
+;   %mode%
+; Default: %mode%
+label-mode = %mode%
+;;label-mode-padding = 2
+label-mode-foreground = ${color.ac}
+label-mode-background = ${color.bg}
+label-mode-padding = 2
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/i3]
 type = internal/i3
 
@@ -540,7 +568,7 @@ index-sort = true
 ; Example: code;♚ will apply the icon to all workspaces 
 ; containing 'code' in the label
 ; Default: false
-;fuzzy-match = true
+fuzzy-match = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
@@ -554,18 +582,30 @@ index-sort = true
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 
+ws-icon-0 = 1;➊
+ws-icon-1 = 2;➋
+ws-icon-2 = 3;➌
+ws-icon-3 = 4;➍
+ws-icon-4 = 5;➎
+ws-icon-5 = 6;➏
+ws-icon-6 = 7;➐
+ws-icon-7 = 8;➑
+ws-icon-8 = 9;➒
+ws-icon-9 = 10;➓
+ws-icon-default = 
+
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
-format = <label-state> <label-mode>
+format = <label-state>
 
 ; Available tokens:
 ;   %mode%
 ; Default: %mode%
-label-mode = %mode%
+;label-mode = %mode%
 ;;label-mode-padding = 2
-label-mode-foreground = ${color.ac}
-label-mode-underline = ${color.red}
+;label-mode-foreground = ${color.ac}
+;label-mode-underline = ${color.red}
 ;label-mode-background = ${color.bg}
 
 ; Available tokens:
@@ -574,11 +614,11 @@ label-mode-underline = ${color.red}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-focused = %name%
-label-focused-foreground = ${color.mf}
-label-focused-background = ${color.ac}
+label-focused = %icon%
+;label-focused-foreground = ${color.mf}
+label-focused-foreground = ${color.ac}
 ;label-focused-underline = ${color.mf}
-label-focused-padding = 2
+label-focused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -586,8 +626,9 @@ label-focused-padding = 2
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-unfocused = %name%
-label-unfocused-padding = 2
+label-unfocused = %icon%
+;label-unfocused-padding = 2
+label-unfocused-foreground = ${color.shade8}
 
 ; Available tokens:
 ;   %name%
@@ -595,7 +636,7 @@ label-unfocused-padding = 2
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-visible = %name%
+;label-visible = %icon%
 ;;label-visible-underline = #555555
 ;;label-visible-padding = 4
 
@@ -605,11 +646,11 @@ label-visible = %name%
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-urgent = %name%
-label-urgent-foreground = ${color.ac}
+label-urgent = %icon%
+label-urgent-foreground = ${color.white}
 ;;label-urgent-foreground = #000000
 ;;label-urgent-background = #bd2c40
-label-urgent-padding = 2
+;label-urgent-padding = 2
 
 ; Separator in between workspaces
 ;label-separator = |
@@ -900,6 +941,9 @@ interval = 1
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
+format-volume-background = ${color.shade4}
+format-volume-foreground = ${color.white}
+format-volume-padding = 1
 
 ; Available tags:
 ;   <label-muted> (default)
@@ -914,7 +958,9 @@ format-volume = <ramp-volume> <label-volume>
 ; Available tokens:
 ;   %percentage% (default)
 label-muted = ﱝ Muted
-label-muted-foreground = #666
+label-muted-background = ${color.shade4}
+label-muted-foreground = ${color.white}
+label-muted-padding = 1
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
