--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -522,6 +522,9 @@ interval = 1
 ;   <icon-seekb>
 ;   <icon-seekf>
 format-online = <label-song>  <icon-prev> <toggle> <icon-stop> <icon-next> <icon-single> <icon-random> <icon-repeat> <bar-progress>  <label-time> 
+format-online-background = ${color.shade8}
+format-online-foreground = ${color.black}
+format-online-padding = 2
 
 ;format-playing = ${self.format-online}
 ;format-paused = ${self.format-online}
@@ -546,7 +549,8 @@ label-song-ellipsis = true
 ;   %elapsed%
 ;   %total%
 ; Default: %elapsed% / %total%
-;;abel-time = %elapsed% / %total%
+;label-time = %elapsed% / %total%
+label-time-foreground = ${color.black}
 
 ; Available tokens:
 ;   None
@@ -568,8 +572,8 @@ icon-consume = ﮁ
 
 ; Used to display the state of random/repeat/repeatone/single
 ; Only applies if <icon-[random|repeat|repeatone|single]> is used
-toggle-on-foreground = ${color.ac}
-toggle-off-foreground = ${color.fg}
+toggle-on-foreground = ${color.black}
+toggle-off-foreground = ${color.shade6}
 
 ; Only applies if <bar-progress> is used
 bar-progress-width = 20
