--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -28,6 +28,7 @@ margin-top = 10
 ; include an external file, like module file, etc.
 
 include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/affix.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 include-file = ~/.config/polybar/bars.ini
@@ -90,14 +91,14 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground = 
-format-background = 
-format-underline =
-format-overline =
-format-spacing =
-format-padding =
-format-margin =
-format-offset =
+;format-foreground =
+;format-background =
+;format-underline =
+;format-overline =
+;format-spacing =
+;format-padding =
+;format-margin =
+;format-offset =
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
