--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -338,6 +338,10 @@ interval = 5
 ; Default: %output%
 label =  %output%%
 
+label-background = ${color.shade3}
+label-foreground = ${color.white}
+label-padding = 1
+
 ; Available tokens:
 ;   %counter%
 ;   %pid%
@@ -383,6 +387,9 @@ interval = 10
 ;;format-background = #999
 ;;format-foreground = #000
 ;;format-padding = 4
+format-background = ${color.shade2}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tokens:
 ;   %output%
@@ -486,6 +493,9 @@ interval = 13
 ;;format-background = #999
 ;;format-foreground = #000
 ;;format-padding = 4
+format-background = ${color.shade1}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tokens:
 ;   %output%
