feat(polybar): Update top_bar

--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -314,6 +314,9 @@ interval = 2
 ;;format = <label> <ramp-coreload>
 format = <bar-load> <label>
 format-prefix = "ﰕ "
+format-background = ${color.shade2}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
@@ -321,6 +324,7 @@ format-prefix = "ﰕ "
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
 label = "%percentage%%"
+label-foreground = ${color.white}
 
 ; Only applies if <bar-load> is used
 bar-load-width = 10
@@ -331,9 +335,9 @@ bar-load-indicator-foreground = ${color.bi}
 bar-load-indicator-font = 2
 
 bar-load-fill = ━
-bar-load-foreground-0 = ${color.bn}
-bar-load-foreground-1 = ${color.bn}
-bar-load-foreground-2 = ${color.bn}
+bar-load-foreground-0 = ${color.white}
+bar-load-foreground-1 = ${color.white}
+bar-load-foreground-2 = ${color.white}
 bar-load-foreground-3 = ${color.bm}
 bar-load-foreground-4 = ${color.bm}
 bar-load-foreground-5 = ${color.bm}
@@ -343,7 +347,7 @@ bar-load-foreground-8 = ${color.bd}
 bar-load-fill-font = 2
 
 bar-load-empty = ┉
-bar-load-empty-foreground = ${color.be}
+bar-load-empty-foreground = ${color.bn}
 bar-load-empty-font = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -407,11 +411,11 @@ bar-used-indicator-foreground = ${color.bi}
 bar-used-indicator-font = 2
 
 bar-used-fill = ━
-bar-used-foreground-0 = ${color.bn}
-bar-used-foreground-1 = ${color.bn}
-bar-used-foreground-2 = ${color.bn}
-bar-used-foreground-3 = ${color.bn}
-bar-used-foreground-4 = ${color.bn}
+bar-used-foreground-0 = ${color.white}
+bar-used-foreground-1 = ${color.white}
+bar-used-foreground-2 = ${color.white}
+bar-used-foreground-3 = ${color.white}
+bar-used-foreground-4 = ${color.white}
 bar-used-foreground-5 = ${color.bm}
 bar-used-foreground-6 = ${color.bm}
 bar-used-foreground-7 = ${color.bd}
@@ -419,7 +423,7 @@ bar-used-foreground-8 = ${color.bd}
 bar-used-fill-font = 2
 
 bar-used-empty = ┉
-bar-used-empty-foreground = ${color.be}
+bar-used-empty-foreground = ${color.bn}
 bar-used-empty-font = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -443,6 +447,9 @@ interval = 2
 ;   <ramp-swap-free>
 format = <bar-used> <label>
 format-prefix = " "
+format-background = ${color.shade2}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -463,6 +470,7 @@ format-prefix = " "
 ;   %gb_swap_used%
 
 label = "%mb_used%"
+label-foreground = ${color.white}
 
 ; Only applies if <bar-used> is used
 bar-used-width = 10
@@ -473,9 +481,9 @@ bar-used-indicator-foreground = ${color.bi}
 bar-used-indicator-font = 2
 
 bar-used-fill = ━
-bar-used-foreground-0 = ${color.bn}
-bar-used-foreground-1 = ${color.bn}
-bar-used-foreground-2 = ${color.bn}
+bar-used-foreground-0 = ${color.white}
+bar-used-foreground-1 = ${color.white}
+bar-used-foreground-2 = ${color.white}
 bar-used-foreground-3 = ${color.bm}
 bar-used-foreground-4 = ${color.bm}
 bar-used-foreground-5 = ${color.bm}
@@ -485,7 +493,7 @@ bar-used-foreground-8 = ${color.bd}
 bar-used-fill-font = 2
 
 bar-used-empty = ┉
-bar-used-empty-foreground = ${color.be}
+bar-used-empty-foreground = ${color.bn}
 bar-used-empty-font = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -532,7 +540,10 @@ format-online-padding = 2
 
 ; Available tags:
 ;   <label-offline>
-;format-offline = <label-offline>
+format-offline = <label-offline>
+format-offline-background = ${color.shade8}
+format-offline-foreground = ${color.black}
+format-offline-padding = 2
 
 ; Available tokens:
 ;   %artist%
@@ -542,7 +553,7 @@ format-online-padding = 2
 ;   %title%
 ; Default: %artist% - %title%
 label-song =  " %title% | %album%"
-label-song-maxlen = 25
+label-song-maxlen = 40
 label-song-ellipsis = true
 
 ; Available tokens:
@@ -554,7 +565,7 @@ label-time-foreground = ${color.black}
 
 ; Available tokens:
 ;   None
-label-offline = "mpd is offline"
+label-offline = "%{A6:/usr/bin/mpd ~/.config/mpd/mpd.conf:} offline%{A}"
 
 ; Only applies if <icon-X> is used
 icon-play = 
@@ -572,8 +583,8 @@ icon-consume = ﮁ
 
 ; Used to display the state of random/repeat/repeatone/single
 ; Only applies if <icon-[random|repeat|repeatone|single]> is used
-toggle-on-foreground = ${color.black}
-toggle-off-foreground = ${color.shade6}
+toggle-on-foreground = ${color.shade2}
+toggle-off-foreground = ${color.shade7}
 
 ; Only applies if <bar-progress> is used
 bar-progress-width = 20
@@ -584,19 +595,19 @@ bar-progress-indicator-foreground = ${color.bi}
 bar-progress-indicator-font = 2
 
 bar-progress-fill = ━
-bar-progress-foreground-0 = ${color.bn}
-bar-progress-foreground-1 = ${color.bn}
-bar-progress-foreground-2 = ${color.bn}
-bar-progress-foreground-3 = ${color.bm}
-bar-progress-foreground-4 = ${color.bm}
-bar-progress-foreground-5 = ${color.bm}
-bar-progress-foreground-6 = ${color.bd}
-bar-progress-foreground-7 = ${color.bd}
-bar-progress-foreground-8 = ${color.bd}
+bar-progress-foreground-0 = ${color.white}
+bar-progress-foreground-1 = ${color.white}
+bar-progress-foreground-2 = ${color.white}
+bar-progress-foreground-3 = ${color.white}
+bar-progress-foreground-4 = ${color.white}
+bar-progress-foreground-5 = ${color.white}
+bar-progress-foreground-6 = ${color.white}
+bar-progress-foreground-7 = ${color.white}
+bar-progress-foreground-8 = ${color.white}
 bar-progress-fill-font = 2
 
 bar-progress-empty = ┈
-bar-progress-empty-foreground = ${color.be}
+bar-progress-empty-foreground = ${color.bn}
 bar-progress-empty-font = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
