--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -13,10 +13,10 @@
 [color]
 
 ;; Active Colors
-bg = #f5f5f5
-fg = #252525
+bg = #eee8d5
+fg = #002b36
 ac = #43a047
-mf = #f5f5f5
+mf = #eee8d5
 
 ;; Bars
 bi = #43a047
