--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -582,16 +582,16 @@ fuzzy-match = true
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 
-ws-icon-0 = 1;➊
-ws-icon-1 = 2;➋
-ws-icon-2 = 3;➌
-ws-icon-3 = 4;➍
-ws-icon-4 = 5;➎
-ws-icon-5 = 6;➏
-ws-icon-6 = 7;➐
-ws-icon-7 = 8;➑
-ws-icon-8 = 9;➒
-ws-icon-9 = 10;➓
+ws-icon-0 = 0;➓
+ws-icon-1 = 1;➊
+ws-icon-2 = 2;➋
+ws-icon-3 = 3;➌
+ws-icon-4 = 4;➍
+ws-icon-5 = 5;➎
+ws-icon-6 = 6;➏
+ws-icon-7 = 7;➐
+ws-icon-8 = 8;➑
+ws-icon-9 = 9;➒
 ws-icon-default = 
 
 ; Available tags:
@@ -647,7 +647,7 @@ label-unfocused-foreground = ${color.shade8}
 ;   %output%
 ; Default: %icon%  %name%
 label-urgent = %icon%
-label-urgent-foreground = ${color.white}
+label-urgent-foreground = ${color.shade1}
 ;;label-urgent-foreground = #000000
 ;;label-urgent-background = #bd2c40
 ;label-urgent-padding = 2
@@ -1001,11 +1001,17 @@ units = true
 ;   <label> (default)
 ;   <ramp>
 format = <ramp> <label>
+format-background = ${color.shade1}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tags:
 ;   <label-warn> (default)
 ;   <ramp>
 format-warn = <ramp> <label-warn>
+format-warn-background = ${color.shade1}
+format-warn-foreground = ${color.reshade7}
+format-warn-padding = 1
 
 ; Available tokens:
 ;   %temperature% (deprecated)
@@ -1018,7 +1024,6 @@ label = %temperature-c%
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
 label-warn = "%temperature-c%"
-label-warn-foreground = #f00
 
 ; Requires the <ramp> tag
 ; The icon selection will range from 0 to `warn-temperature`
