--- a/.config/polybar/bottom_bar.ini
+++ b/.config/polybar/bottom_bar.ini
@@ -103,9 +103,9 @@ padding = 0
 
 font-0 = "Meslo LG S:size=7;2"
 font-1 = "Symbols Nerd Font:size=11;2"
-font-2 = "MesloLGS Nerd Font Mono::size=13;3"
-font-3 = "WenQuanYi Micro Hei:size=7;2"
-font-4 = "Noto Sans CJK SC:size=12;2"
+font-2 = "WenQuanYi Micro Hei:size=7;2"
+font-3 = "Noto Sans CJK SC:size=12;2"
+font-4 = "MesloLGS Nerd Font Mono::size=13;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -128,7 +128,7 @@ font-4 = "Noto Sans CJK SC:size=12;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = mpd_bar left--2
+modules-left = mpd_bar left-4
 modules-center = i3
 modules-right = i3-mode right-4 pulseaudio right-3 custom_backlight right-2 battery battery_power right-1 calendar
 
