--- a/.config/polybar/top_bar.ini
+++ b/.config/polybar/top_bar.ini
@@ -79,13 +79,13 @@ radius-bottom = 0.0
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2
+;padding = 2
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 2
+;module-margin-left = 1
+;module-margin-right = 2
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -106,6 +106,7 @@ font-0 = "Meslo LG S:size=7;2"
 font-1 = "Symbols Nerd Font:size=11;2"
 font-2 = "WenQuanYi Micro Hei:size=7;2"
 font-3 = "Noto Sans CJK SC:size=7;2"
+font-4 = "MesloLGS Nerd Font Mono::size=13;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -128,8 +129,9 @@ font-3 = "Noto Sans CJK SC:size=7;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
+modules-left = left8
 modules-center = title
-modules-right = updates colors-switch bbswitch cpu_bar memory_bar temperature
+modules-right = right-4 colors-switch right-3 bbswitch right-2 cpu_bar memory_bar right-1 temperature
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -179,7 +181,7 @@ tray-maxsize = 16
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-;tray-background = ${color.bg}
+tray-background = ${color.shade8}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
