--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -290,9 +290,9 @@ type = custom/text
 content = 
 
 ; "content" has the same properties as "format-NAME"
-;;content-background = ${color.ac}
-;;content-foreground = ${color.bg}
-;;content-padding = 3
+content-background = ${color.shade4}
+content-foreground = ${color.white}
+content-padding = 1
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left = ~/.config/polybar/scripts/color-switch.sh &
@@ -440,9 +440,9 @@ interval = 5
 ;   <output> - deprecated
 ;   <label> (default)
 ;;format = <label>
-;;format-background = #999
-;;format-foreground = #000
-;;format-padding = 4
+format-background = ${color.shade3}
+format-foreground = ${color.white}
+format-padding = 1
 
 ; Available tokens:
 ;   %output%
