--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -921,9 +921,6 @@ ramp-signal-4 = 直
 [module/pulseaudio]
 type = internal/pulseaudio
 
-click-middle = ~/.config/polybar/scripts/pulseaudio-sink-menu &
-click-right = ~/.config/polybar/scripts/pulseaudio-sink-menu &
-
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
 ;sink = alsa_output.pci-0000_12_00.3.analog-stereo
@@ -940,7 +937,7 @@ interval = 1
 ;   <label-volume> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
-format-volume = <ramp-volume> <label-volume>
+format-volume = %{A3:alacritty -t pulsemixer-float -d 90 20 -e pulsemixer &:}<ramp-volume> <label-volume>%{A}
 format-volume-background = ${color.shade4}
 format-volume-foreground = ${color.white}
 format-volume-padding = 1
@@ -957,7 +954,7 @@ format-volume-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
-label-muted = ﱝ Muted
+label-muted = %{A3:alacritty -t pulsemixer-float -d 90 20 -e pulsemixer &:}ﱝ Muted%{A}
 label-muted-background = ${color.shade4}
 label-muted-foreground = ${color.white}
 label-muted-padding = 1
