fix: Fix color switch scripts

--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -68,7 +68,7 @@ rpc-listen-all=true
 ## BT/PT下载相关 ##
 
 # 当下载的是一个种子(以.torrent结尾)时, 自动开始BT任务, 默认:true
-#follow-torrent=true
+follow-torrent=false
 # BT监听端口, 当端口被屏蔽时使用, 默认:6881-6999
 listen-port=51413
 # 单个种子最大连接数, 默认:55
