--- a/.config/deluge/core.conf
+++ b/.config/deluge/core.conf
@@ -19,7 +19,8 @@
     "download_location": "/home/heyrict/Downloads",
     "download_location_paths_list": [
         "/home/heyrict/Downloads",
-        "/mnt/LENOVO/Eric/mov"
+        "/mnt/LENOVO/Eric/mov",
+        "/mnt/LENOVO/Eric/pc/archive"
     ],
     "enabled_plugins": [
         "DefaultTrackers"
