--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -14,13 +14,13 @@
 
 ;; Active Colors
 bg = #eee8d5
-fg = #002b36
-ac = #43a047
+fg = #073642
+ac = #7cb342
 mf = #eee8d5
 
 ;; Bars
-bi = #43a047
-be = #43a047
+bi = #7cb342
+be = #7cb342
 bf = #43a047
 bn = #43a047
 bm = #fdd835
@@ -31,14 +31,14 @@ white = #eee8d5
 black = #002b36
 
 ;; Shade
-shade1 = #1B5E20
-shade2 = #2E7D32
-shade3 = #388E3C
-shade4 = #43A047
-shade5 = #4CAF50
-shade6 = #66BB6A
-shade7 = #81C784
-shade8 = #A5D6A7
+shade1 = #33691E
+shade2 = #558B2F
+shade3 = #689F38
+shade4 = #7CB342
+shade5 = #8BC34A
+shade6 = #9CCC65
+shade7 = #AED581
+shade8 = #C5E1A5
 
 ;; Material Colors
 
