--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -937,7 +937,7 @@ interval = 1
 ;   <label-volume> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
-format-volume = %{A3:alacritty -t pulsemixer-float -d 90 20 -e pulsemixer &:}<ramp-volume> <label-volume>%{A}
+format-volume = %{A3:alacritty -t pulsemixer-float -o window.dimensions.columns=90 -o window.dimensions.lines=20 -e pulsemixer &:}<ramp-volume> <label-volume>%{A}
 format-volume-background = ${color.shade4}
 format-volume-foreground = ${color.white}
 format-volume-padding = 1
@@ -954,7 +954,7 @@ format-volume-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
-label-muted = %{A3:alacritty -t pulsemixer-float -d 90 20 -e pulsemixer &:}ﱝ Muted%{A}
+label-muted = %{A3:alacritty -t pulsemixer-float -o window.dimensions.columns=90 -o window.dimensions.lines=20 -e pulsemixer &:}ﱝ Muted%{A}
 label-muted-background = ${color.shade4}
 label-muted-foreground = ${color.white}
 label-muted-padding = 1
