--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -507,8 +507,8 @@ format-padding = 1
 ;   %pid%
 ;
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c [command]"
-click-left = alacritty -t "calendar-float" -d 68 35 -e bash -c "cal -y; sleep 24h" &
-click-right = alacritty -t "calendar-float" -d 105 34 -e bash -c "task calendar y; sleep 24h" &
+click-left = alacritty -t "calendar-float" -o window.dimensions.columns=68 -o window.dimensions.lines=35 -e bash -c "cal -y; sleep 24h" &
+click-right = alacritty -t "calendar-float" -o window.dimensions.columns=105 -o window.dimensions.lines=34 -e bash -c "task calendar y; sleep 24h" &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
