--- a/.config/pip/pip.conf
+++ b/.config/pip/pip.conf
@@ -1,3 +1,6 @@
 [global]
-index-url = https://pypi.tuna.tsinghua.edu.cn/simple
+index-url = http://mirrors.aliyun.com/pypi/simple/
+#index-url = https://pypi.tuna.tsinghua.edu.cn/simple
 
+[install]
+trusted-host = mirrors.aliyun.com
