--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -529,7 +529,7 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = %{A1:alacritty -t "ncmpcpp-float" -d 120 38 -e "ncmpcpp" &:}%{A} <label-song>  <icon-prev> <toggle> <icon-stop> <icon-next> <icon-single> <icon-random> <icon-repeat> <bar-progress>  <label-time> 
+format-online = %{A1:alacritty -t "ncmpcpp-float" -o window.dimensions.columns=120 window.dimensions.lines=38 -e "ncmpcpp" &:}%{A} <label-song>  <icon-prev> <toggle> <icon-stop> <icon-next> <icon-single> <icon-random> <icon-repeat> <bar-progress>  <label-time> 
 format-online-background = ${color.shade8}
 format-online-foreground = ${color.black}
 format-online-padding = 2
